# llama-bindings

./: .env.sample  .gitignore  AGENTS.md  CLAUDE.md  README.md  Taskfile.yml
.github/workflows/: ci.yml  e2e.yml  publish.yml  release.yml
bindings/go/: README.md  go.mod  go.sum
bindings/go/agent/: agent.go  agent_test.go
bindings/go/knowledge/: store.go  store_test.go
bindings/go/llama/: chat.go  chat_test.go  doc.go  embed.go  embed_test.go  engine.go  engine_test.go  errors.go  loader.go  loader_unix.go  loader_windows.go  native_darwin_amd64.go  native_darwin_arm64.go  native_linux_amd64.go  native_linux_arm64.go  native_unsupported.go  native_windows_amd64.go  observability.go  types.go
bindings/go/llama/prebuilt/darwin_amd64/: libllama_bridge.dylib
bindings/go/llama/testdata/: dummy-embed.gguf
bindings/go/tools/: registry.go  registry_test.go
bindings/java/: README.md  pom.xml
bindings/java/src/main/java/com/example/llama/: ChatEngine.java  ChatOptions.java  EmbedEngine.java  EmbedOptions.java  Event.java  EventListener.java  LlamaEngine.java  LlamaException.java  LlamaLibrary.java  LoadOptions.java  NativeLibrary.java
bindings/java/src/main/java/com/example/llama/agent/: Agent.java
bindings/java/src/main/java/com/example/llama/knowledge/: KnowledgeStore.java
bindings/java/src/main/java/com/example/llama/model/: ChatMessage.java  ChatRequest.java  ChatResponse.java  ErrorInfo.java  GenerationOptions.java  ToolCall.java  ToolDefinition.java  UsageInfo.java
bindings/java/src/main/java/com/example/llama/tools/: ToolRegistry.java
bindings/java/src/test/java/com/example/llama/: ChatEngineTest.java  EmbedEngineTest.java  LlamaEngineTest.java
bindings/java/src/test/java/com/example/llama/agent/: AgentTest.java
bindings/java/src/test/java/com/example/llama/e2e/: E2ETest.java
bindings/java/src/test/java/com/example/llama/knowledge/: KnowledgeStoreTest.java
bindings/java/src/test/java/com/example/llama/tools/: ToolRegistryTest.java
bindings/js/: package-lock.json  package.json
bindings/js-browser/: README.md  jest.config.json  package-lock.json  package.json
bindings/js-browser/src/: chat.js  embed.js  errors.js  observability.js  types.js
bindings/js-browser/src/agent/: agent.js
bindings/js-browser/src/knowledge/: store.js
bindings/js-browser/src/tools/: registry.js
bindings/js-browser/test/: agent.test.js  chat.test.js  embed.test.js  registry.test.js  store.test.js
bindings/js/src/: llama.js
bindings/js/test/: llama.test.js
bridge/: CMakeLists.txt
bridge/include/: llama_bridge.h
bridge/src/: llama_bridge.c  llama_bridge.cpp  llama_bridge_chat.c  llama_bridge_chat.cpp  llama_bridge_embed.c  llama_bridge_embed.cpp  llama_bridge_internal.h  llama_bridge_json.c  llama_bridge_observe.c
docs/: build.md  design.md  export-import.md  observability.md  publishing.md  testing.md  upgrade.md
docs/specs/: ci-cd-cross-platform.md  spec-template.md
examples/agent-team/: README.md
examples/agent-team/go/: go.mod  go.sum  index.html  main.go
examples/agent-team/java/: pom.xml
examples/agent-team/java/src/main/java/agentteam/: Main.java
examples/agent-team/java/src/main/resources/: application.properties
examples/agent-team/java/src/main/resources/static/: index.html
examples/agent-team/js-browser/: index.html
scripts/: verify-artifacts.sh
tests/e2e/: README.md  download_model.sh  e2e-spec.md  run-e2e-examples.sh
tests/e2e/go/: e2e_test.go  go.mod
tests/e2e/java/: E2ETest.java
tests/e2e/js-browser/: package-lock.json  package.json  playwright.config.js
tests/e2e/js-browser/app/: index.html
tests/e2e/js-browser/specs/: agent.spec.js  chat.spec.js  embed.spec.js
tests/fixtures/chat_requests/: schema_mode.json  text_mode.json  tool_mode.json
tests/fixtures/prompts/: embed_basic.txt
tests/fixtures/schemas/: person_extract.json
tests/fixtures/tool_requests/: lookup_weather.json
tests/integration/: README.md
tests/prompts/: factual.txt
wasm/glue/: llama_bridge_glue.js
